use canvas and add color to settings

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <pg-settings-sidebar></pg-settings-sidebar>
 
 <div class="pattern-wrapper">
-  <pg-pattern-cell></pg-pattern-cell>
+<!--  <pg-pattern-cell></pg-pattern-cell>-->
+  <pg-pattern-canvas></pg-pattern-canvas>
 </div>
