--- a/src/app/settings-sidebar/components/settings-sidebar/settings-sidebar.component.scss
+++ b/src/app/settings-sidebar/components/settings-sidebar/settings-sidebar.component.scss
@@ -5,5 +5,22 @@
   form {
     display: flex;
     flex-direction: column;
+
+    .color-picker {
+      width: 100%;
+      height: 48px;
+      padding: 8px;
+
+      .current-color {
+        width: 100%;
+        height: 100%;
+      }
+
+      input {
+        visibility: hidden;
+        width: 0;
+        height: 0;
+      }
+    }
   }
 }
