--- a/src/app/settings-sidebar/components/settings-sidebar/settings-sidebar.component.html
+++ b/src/app/settings-sidebar/components/settings-sidebar/settings-sidebar.component.html
@@ -4,9 +4,11 @@
   <mat-slider formControlName="sideA" min="2" max="30" [thumbLabel]="true"></mat-slider>
   <label>Side B: {{settingsForm?.value?.sideB}}</label>
   <mat-slider formControlName="sideB" min="2" max="30" [thumbLabel]="true"></mat-slider>
+  <label>Cell size: {{settingsForm?.value?.cellSize}}</label>
+  <mat-slider formControlName="cellSize" min="5" max="100" [thumbLabel]="true"></mat-slider>
   <label>Color:</label>
   <div class="color-picker" (click)="colorInput.click()">
-    <div class="current-color" [ngStyle]="{backgroundColor: settingsForm.value.color}"></div>
+    <div class="current-color" [ngStyle]="{backgroundColor: settingsForm?.value?.color}"></div>
     <input #colorInput formControlName="color" type="color"/>
   </div>
 </form>
